Writing through news summary items

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -14,7 +14,7 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 <hr>
 
-- _**I used NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** to assist production of this edition of w3w. Final edit 100% by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._ <!-- Edit listed AIs as needed before final publication. -->
+- _**I used NotebookLM, Leo/Llama 3.1, ChatGPT, and Copilot:** to assist production of this edition of w3w. Final edit 100% by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._ <!-- Edit listed AIs as needed before final publication. -->
 
 - _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. To join them in supporting this work, check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
 
@@ -24,7 +24,9 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 **The future of stablecoins looks brighter everyday.** But the U.S. dollar's future? Not so much.
 
-- Circle, the issuer of the popular USDC stablecoin, has launched its initial public offering (IPO) with a target valuation of around $6 billion.** The company plans to raise approximately $624 million by selling shares at a price range of $24 to $26 apiece, which could have significant investment implications for Coinbase, a major partner in the stablecoin's distribution. ([CNBC](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html)) | BlackRock is looking to be a big buyer of the Circle IPO: https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg
+<!-- Transitions. Yadda yadda yadda... -->
+
+- **Circle, issuer of the popular USDC stablecoin,** filed with U.S. regulators on Tuesday to [do an initial public offering](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html) at the New York Stock Exchange that would value the company near $6 billion. Bloomberg News reports that asset manager BlackRock, which previously invested in Circle during its private fundraising rounds, plans to [buy additional shares](https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg) in the IPO.
 
 - Bloodbath in non-stablecoin cryptos last week: https://decrypt.co/323034/xrp-solana-alts-slip-crypto-market-contracts | https://decrypt.co/323142/crypto-liquidations-800-million-bitcoin-dogecoin-ethereum
 
@@ -53,15 +55,15 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- The Trump administration has been quietly expanding Palantir's work with the government, with the company's technology being adopted by at least four federal agencies, including the Department of Homeland Security and the Health and Human Services Department. This move has raised concerns about the potential for a master list of personal information on Americans to be compiled, giving the administration untold surveillance power and sparking debate about data privacy and security. ([New York Times](https://news.google.com/read/CBMihwFBVV95cUxQY3g5bE9MTENNcFFaVkNkTjFydTlDc1cxcVR2T09ocTBuUDlZbzJNUU04clVDUUFrRnBMSDlRSXhVMlJIT3dNb1JVMkhqUTZHVlk3NjlDVHpibzhNUzViRHFFM3JKSVl0Y2ZZUjd2M1I4bWhEX1BmX29CY3JnTVU1TldGa3dtUVU?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **The Trump administration has been quietly expanding Palantir's federal contracting work,** raising concerns about increased surveillance of American citizens by consolidating their personal information into a single master dataset. Palantir's tech is already being adopted by at least four federal agencies, including the Department of Homeland Security, the Department of Defense, and the Health and Human Services Department. The Internal Revenue Service and the Social Security Administration could be up next. ([New York Times](https://news.google.com/read/CBMihwFBVV95cUxQY3g5bE9MTENNcFFaVkNkTjFydTlDc1cxcVR2T09ocTBuUDlZbzJNUU04clVDUUFrRnBMSDlRSXhVMlJIT3dNb1JVMkhqUTZHVlk3NjlDVHpibzhNUzViRHFFM3JKSVl0Y2ZZUjd2M1I4bWhEX1BmX29CY3JnTVU1TldGa3dtUVU?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- **AI Watch:** Nvidia earnings beat <!-- --> | The New York Times [struck a deal](https://www.theverge.com/news/676291/new-york-times-ai-deal-amazon) with Amazon, its first licensing agreement to officially make the newspaper's content available to train AI models. (Unofficially, let's be honest, its content has been scraped by a bunch of AI models already.) | China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china | Telegram/xAI deal: https://decrypt.co/322462/toncoin-soars-amid-telegram-musk-xai-deal-1-5-billion-bond-sale-report
+- **AI Watch:** Chipmaker Nvidia's quarterly revenue [leapt 70%](https://news.google.com/read/CBMicEFVX3lxTFB5Q3hXNHlfbUlJbnJGRVVwTHlWck9wUTNoLUFhUy1xaXB0eEg3b1E0MjI4Tkthakp6ZHVIRkhnZDJ0NlVtTTMzTHhZeG9MVFJXMU1YM2F6M2N6QnVvT2xubXUyZTZCQ2xsWVJ2dkNDcEg?hl=en-US&gl=US&ceid=US%3Aen), beating Wall Street expectations. In effect, resilient chip demand for AI applications and data centers helped Nvidia shake off headwinds from the burgeoning U.S.-China trade war... The New York Times [struck a deal](https://www.theverge.com/news/676291/new-york-times-ai-deal-amazon) with Amazon, its first licensing agreement to officially make the newspaper's content available to train AI models.
 
-- Despite the recent surge in crypto prices, search volume for key terms like "memecoin" and "bitcoin" remains relatively flat, suggesting a lack of retail engagement in the current market. This trend is corroborated by app store rankings, which show Coinbase and Robinhood hovering around 300th place in the US Apple App Store, rather than climbing to the top charts typically seen during retail surges. ([The Block](https://www.theblock.co/post/355861/crypto-search-trends-and-app-rankings-show-tepid-engagement-despite-recent-surge)) <!-- Draft summary by Leo/Llama 3.1 8B-->
+- **Search volume for crypto-related terms** like "bitcoin" has been relatively flat, suggesting a lack of interest among retail investors despite this year's surge in token prices. The trend is echoed in mobile app rankings, which recently showed Coinbase and Robinhood around 300th place in the U.S. version of Apple's App Store. ([The Block](https://www.theblock.co/post/355861/crypto-search-trends-and-app-rankings-show-tepid-engagement-despite-recent-surge))
 
-- **Nevertheless, on-chain experimentation is alive and well.** New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access | Bergen County, NJ tokenizing 240B in real estate on Avalanche | https://www.theblock.co/post/356434/uphold-teases-xrp-yield-and-relaunching-crypto-debit-card-in-us | https://decrypt.co/323189/bored-ape-maker-sells-moonbirds-gaming-startup
+- **But on-chain experimentation remains alive and well** among startups and financial firms. A new open source project allows users to send bitcoin [without internet access](https://decrypt.co/322192/project-send-bitcoin-without-internet-access)... Uphold said it is [exploring](https://www.theblock.co/post/356434/uphold-teases-xrp-yield-and-relaunching-crypto-debit-card-in-us) ways to offer yield-bearing investments using the Ripple token... Balcony signed a five-year contract with New Jersey's Bergen County to [tokenize local property deeds](https://cointelegraph.com/news/new-jersey-county-tokenize-240-billion-property-deeds) worth up to $240 billion... Yuga Labs [sold the rights](https://decrypt.co/323189/bored-ape-maker-sells-moonbirds-gaming-startup) to its Moonbirds series of non-fungible tokens (NFTs) to Orange Cap Games for an undisclosed sum.
 
-- **And institutional treasury strategies continue to grow.** 21Capital has raised almost $700m. <!-- Link TK --> | Pakistan announces new national BTC reserve | El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase | Gamestop | World Liberty | Nigel Farage wants the UK to have an official bitcoin reserve. https://decrypt.co/323180/nigel-farage-slash-crypto-capital-gains-bitcoin-reserve
+- **And treasury strategies continue to grow among both public and private institutions.** 21Capital has raised almost $700m. <!-- Link TK --> | Pakistan announces new national BTC reserve | El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase | Gamestop | World Liberty | Nigel Farage wants the UK to have an official bitcoin reserve. https://decrypt.co/323180/nigel-farage-slash-crypto-capital-gains-bitcoin-reserve
 
 <!--
 
@@ -91,7 +93,7 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 ### Odds & Ends
 
-- **A busy 48 hours:** On Friday, the New York Times reported at length about Elon Musk's escalating [drug use and paternity issues](https://news.google.com/read/CBMifkFVX3lxTE1xdl8zVkxlTEpYQXJaZml2TUFtaGlwbnBaQlUyUmlEeDNVR3NKaGtacHNhYUhObEpRLWtPd2xCTVBVaXZXUE84aVFrMnp3Umh6WGJ6UklIQkprdThfX1NhbDhrWlItZkxuMTFDZHYyUkJFdWFaSEF4ZHAzbzFIdw?hl=en-US&gl=US&ceid=US%3Aen) while campaigning for Donald Trump. Then Musk showed up at an Oval Office press conference with a black eye, prompting the Times to speculate in Saturday's edition about who might have [punched him in the face](https://news.google.com/read/CBMie0FVX3lxTE02b0dGZGhFaHZqNHJJWXlEWm9kbXF0dUdDU1N3eEEyTXdvazBxMUZvYzREclczN3ZPQ0J1NG8zMGZlQlBrNjNfNkFqZ095dHlRMDdWYTQxMTE2ckg2QnZNVHk1cVZLbllIc0VlbktJUTBwUk1JV3htMlllZw?hl=en-US&gl=US&ceid=US%3Aen). Officially, Musk says he got the new shiner while horsing around with his 5-year-old son X. But I think it's pretty clear the Gray Lady is skeptical. 🤨
+- **A busy 48 hours:** On Friday, the New York Times reported at length about Elon Musk's escalating [drug use and paternity issues](https://news.google.com/read/CBMifkFVX3lxTE1xdl8zVkxlTEpYQXJaZml2TUFtaGlwbnBaQlUyUmlEeDNVR3NKaGtacHNhYUhObEpRLWtPd2xCTVBVaXZXUE84aVFrMnp3Umh6WGJ6UklIQkprdThfX1NhbDhrWlItZkxuMTFDZHYyUkJFdWFaSEF4ZHAzbzFIdw?hl=en-US&gl=US&ceid=US%3Aen) while campaigning for Donald Trump. Then Musk showed up at an Oval Office press conference with a black eye, prompting the Times to speculate in Saturday's edition about who might have [punched him in the face](https://news.google.com/read/CBMie0FVX3lxTE02b0dGZGhFaHZqNHJJWXlEWm9kbXF0dUdDU1N3eEEyTXdvazBxMUZvYzREclczN3ZPQ0J1NG8zMGZlQlBrNjNfNkFqZ095dHlRMDdWYTQxMTE2ckg2QnZNVHk1cVZLbllIc0VlbktJUTBwUk1JV3htMlllZw?hl=en-US&gl=US&ceid=US%3Aen). Officially, Musk says he got the new shiner while horsing around with his 5-year-old son X. But the Gray Lady sure seems skeptical of that version of events. 🤨
 
 - **Slate's Forrest Wickman spent months investigating** what he calls ["the wrongest bird in the history of cinema."](https://x.com/ForrestW/status/1921725033837129751) The critter, identified onscreen as a Pygmy Nuthatch in 2000's Charlie's Angels, was in fact [a Venezuelan Troupial](https://slate.com/culture/2025/05/birds-movies-charlies-angels-2000-pygmy-nuthatch.html).
 
