Adding lead item drafted largely by ChatGPT...

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -22,9 +22,31 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 <hr>
 
+<!-- Lede by me... -->
+
 **The future of stablecoins looks brighter everyday.** But the U.S. dollar's future? Not so much.
 
-<!-- Transitions. Yadda yadda yadda... -->
+<!-- Asked ChatGPT to finish out the draft based on my lede and research notes, links I'd gathered, etc. Here's what it came up with. -->
+
+Last week’s developments tell a compelling story about where financial momentum is heading. While traditional macro indicators flashed warning signs—U.S. bond market instability, new steel tariffs, and legal setbacks for the White House—stablecoin companies were busy building.
+
+Take Circle, the issuer of USDC, which just filed to go public on the New York Stock Exchange. Its IPO, expected to value the company near \$6 billion, would be a landmark moment not just for Circle but for the entire stablecoin sector. BlackRock, already an investor, reportedly plans to increase its stake—further validating stablecoins as institutional-grade financial infrastructure.
+
+Meanwhile, Axios reports that upstart Atticus is raising a round that could give it a \$2 billion valuation, making it the first stablecoin unicorn of 2025. Unlike Circle, Atticus has been positioning itself at the bleeding edge of policy conversations, with insiders from defense tech and D.C. backing the effort.
+
+In the background, non-stablecoin crypto markets took a hit, with nearly \$800 million in liquidations across altcoins like Solana, XRP, and Dogecoin. But the damage hasn’t dented the stablecoin thesis. On the contrary, a new industry survey suggests that B2B payments using stablecoins are now running at a \$36 billion annual pace.
+
+What makes this shift so striking is its contrast to broader macro anxiety. JPMorgan CEO Jamie Dimon warned this week of a “crack” forming in the U.S. bond market due to fiscal mismanagement. Elsewhere, markets remain jittery over the uncertain implications of proposed steel tariffs and legal decisions affecting trade.
+
+As these stresses accumulate, lawmakers are starting to pay attention to stablecoins not just as a crypto niche, but as systemic components of the future financial order. Senator J.D. Vance and others have floated frameworks for U.S. dollar-backed reserves, while Wyoming Senator Cynthia Lummis used the Bitcoin 2025 conference to promote stablecoin legislation focused on reserve transparency and market structure.
+
+Still, not everyone is cheering. The Bank of Korea flagged potential macroeconomic side effects from widespread private-sector stablecoin issuance. And economists like Harvard’s Kenneth Rogoff (new book forthcoming) are weighing in with cautionary notes.
+
+But momentum seems to be on the side of innovation. As economist J.W. Mason recently put it, there’s now a “moron premium” attached to markets perceived as politically dysfunctional. In that light, it’s no wonder capital is flowing into programmable dollars that can move globally at internet speed.
+
+Stablecoins are no longer a curiosity. They’re a category.
+
+<!-- Earlier notes, links I gathered to related articles... -->
 
 - **Circle, issuer of the popular USDC stablecoin,** filed with U.S. regulators on Tuesday to [do an initial public offering](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html) at the New York Stock Exchange that would value the company near $6 billion. Bloomberg News reports that asset manager BlackRock, which previously invested in Circle during its private fundraising rounds, plans to [buy additional shares](https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg) in the IPO.
 
