Writing through lead item

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -1,11 +1,3 @@
-<!--
-
-Drafting some news summaries below for articles using following prompt to Brave's in-browser chatbot Leo/Llama 3.1 8B:
-
-I'm thinking of using the news article in this browser tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? Do not include a headline.
-
--->
-
 # tktk
 ## tktk
 
@@ -22,49 +14,31 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 <hr>
 
-<!-- Lede by me... -->
+**The future of stablecoins looks brighter everyday.** But the U.S. dollar's future? [Not so much](https://www.youtube.com/watch?v=pT2cohNt6a4&pp=ygUQa2xlaW4gcm9nb2ZmIG55dA%3D%3D).
 
-**The future of stablecoins looks brighter everyday.** But the U.S. dollar's future? Not so much.
-
-<!-- Asked ChatGPT to finish out the draft based on my lede and research notes, links I'd gathered, etc. Here's what it came up with. -->
-
-Last week’s developments tell a compelling story about where financial momentum is heading. While traditional macro indicators flashed warning signs—U.S. bond market instability, new steel tariffs, and legal setbacks for the White House—stablecoin companies were busy building.
-
-Take Circle, the issuer of USDC, which just filed to go public on the New York Stock Exchange. Its IPO, expected to value the company near \$6 billion, would be a landmark moment not just for Circle but for the entire stablecoin sector. BlackRock, already an investor, reportedly plans to increase its stake—further validating stablecoins as institutional-grade financial infrastructure.
-
-Meanwhile, Axios reports that upstart Atticus is raising a round that could give it a \$2 billion valuation, making it the first stablecoin unicorn of 2025. Unlike Circle, Atticus has been positioning itself at the bleeding edge of policy conversations, with insiders from defense tech and D.C. backing the effort.
-
-In the background, non-stablecoin crypto markets took a hit, with nearly \$800 million in liquidations across altcoins like Solana, XRP, and Dogecoin. But the damage hasn’t dented the stablecoin thesis. On the contrary, a new industry survey suggests that B2B payments using stablecoins are now running at a \$36 billion annual pace.
-
-What makes this shift so striking is its contrast to broader macro anxiety. JPMorgan CEO Jamie Dimon warned this week of a “crack” forming in the U.S. bond market due to fiscal mismanagement. Elsewhere, markets remain jittery over the uncertain implications of proposed steel tariffs and legal decisions affecting trade.
-
-As these stresses accumulate, lawmakers are starting to pay attention to stablecoins not just as a crypto niche, but as systemic components of the future financial order. Senator J.D. Vance and others have floated frameworks for U.S. dollar-backed reserves, while Wyoming Senator Cynthia Lummis used the Bitcoin 2025 conference to promote stablecoin legislation focused on reserve transparency and market structure.
-
-Still, not everyone is cheering. The Bank of Korea flagged potential macroeconomic side effects from widespread private-sector stablecoin issuance. And economists like Harvard’s Kenneth Rogoff (new book forthcoming) are weighing in with cautionary notes.
-
-But momentum seems to be on the side of innovation. As economist J.W. Mason recently put it, there’s now a “moron premium” attached to markets perceived as politically dysfunctional. In that light, it’s no wonder capital is flowing into programmable dollars that can move globally at internet speed.
-
-Stablecoins are no longer a curiosity. They’re a category.
-
-<!-- Earlier notes, links I gathered to related articles... -->
+Let's start with the good news, all of it on the token startups' end of things:
 
 - **Circle, issuer of the popular USDC stablecoin,** filed with U.S. regulators on Tuesday to [do an initial public offering](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html) at the New York Stock Exchange that would value the company near $6 billion. Bloomberg News reports that asset manager BlackRock, which previously invested in Circle during its private fundraising rounds, plans to [buy additional shares](https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg) in the IPO.
 
-- Bloodbath in non-stablecoin cryptos last week: https://decrypt.co/323034/xrp-solana-alts-slip-crypto-market-contracts | https://decrypt.co/323142/crypto-liquidations-800-million-bitcoin-dogecoin-ethereum
+- **Axios reports that startup Atticus** is raising a venture round that could make it the [first new "unicorn"](https://www.theblock.co/post/356431/stablecoin-startup-atticus-nears-2-billion-valuation-following-raise-led-by-defense-tech-firm-ceo-report) minted among stablecoin issuers in 2025. The deal could reported value Atticus as high as $2 billion.
 
-- B2B stablecoin payments survey shows $36 billion annual pace: https://www.theblock.co/post/356231/b2b-stablecoin-payments-surge-to-36-billion-annual-pace-survey-finds
+- **The average volume of business-to-business stablecoin payments** hit $3 billion per month in early 2025, [up thirtyfold](https://www.theblock.co/post/356231/b2b-stablecoin-payments-surge-to-36-billion-annual-pace-survey-finds) over the last two years, according to a new survey by Artemis, Castle Island Ventures, and Dragonfly Ventures.
 
-- Macro factors: Admin's tariff loss in court | Bloomberg's Levine on Fannie/Freddie re-privatization. See Fastmail archives. | New steel tariffs: https://www.wsj.com/economy/trade/trump-is-praising-his-u-s-steel-deal-no-one-is-sure-what-it-means-a6cb15b5?st=JrQFKy&reflink=desktopwebshare_permalink | Dimon predicts "crack" in the bond market: https://www.wsj.com/finance/jpmorgans-jamie-dimon-predicts-crack-in-the-bond-market-citing-u-s-fiscal-mess-9d90cb3f
+- **A bill is pending in Congress** to clarify U.S. regulations for stablecoins. Both [Vice President J.D. Vance](https://www.axios.com/2025/05/28/vance-trump-crypto-bitcoin-stablecoin) and [Sen. Cynthia Lummis](https://bitcoinmagazine.com/news/us-senator-cynthia-lummis-discusses-bitcoin-reserve-stablecoin-legislation-and-market-structure-bill-at-bitcoin-2025-conference) (R-Wyo.) touted the legislation in remarks last week to the Bitcoin Las Vegas conference.
 
-- **Axios reports that stablecoin startup Atticus** is raising a venture round that could make it the category's [first "unicorn" of 2025](https://www.theblock.co/post/356431/stablecoin-startup-atticus-nears-2-billion-valuation-following-raise-led-by-defense-tech-firm-ceo-report), with a valuation up to $2 billion.
+- **The biggest stablecoin by far is still Tether,** whose capitalization trails only bitcoin and ether among all digital assets. So far in 2025, its valuation has risen 12% to $153 billion, according to [CoinMarketCap](https://coinmarketcap.com/currencies/tether/).
 
-- Rogoff book: TKTKKT | Mason on the "moron premium" https://www.theatlantic.com/economy/archive/2025/04/trump-truss-moron-premium/682421/
+**Stablecoins carry that monicker** because they're pegged to some other asset, usually the U.S. dollar. Thus they can serve as a useful link between the on-chain financial world and the conventional, greenback-based version. (More on that in a minute.)
 
-- https://www.axios.com/2025/05/28/vance-trump-crypto-bitcoin-stablecoin
+Companies that issue stablecoins make money primarily through interest earned on the reserve assets backing their tokens — typically government-issued cash or short-term U.S. Treasury securities. Some issuers also charge fees to enterprise clients and fintech partners for API access, wallet services, payment processing, or other integrations. <!-- Hat tip to ChatGPT for this graf.-->
 
-- https://bitcoinmagazine.com/news/us-senator-cynthia-lummis-discusses-bitcoin-reserve-stablecoin-legislation-and-market-structure-bill-at-bitcoin-2025-conference
+Perhaps surprisingly, though, what these companies *don't* seem to need is a resilient dollar that holds its value well against other foreign denominations. Hence stablecoin startups' ability to keep booming even as the U.S. Dollar Index, which measures the greenback's value against a basket of overseas currencies, has dropped nearly 9% in 2025.
 
-- Bank of Korea concerned about stablecoins' macro side effects: https://decrypt.co/322233/bank-of-korea-stablecoins-private-sector
+Which brings us to the bad news, as I think most readers would define it.
+
+The dollar has softened due to a mix of macroeconomic factors that is probably familiar by now: America's [on](https://www.wsj.com/economy/trade/trump-is-praising-his-u-s-steel-deal-no-one-is-sure-what-it-means-a6cb15b5?st=JrQFKy&reflink=desktopwebshare_permalink)-and-[off](https://news.google.com/read/CBMijAFBVV95cUxQZ1hyeDBxQ2JVX0lSWklNUnlDcWZQb19VYnVsZnJJb0lhZC0zVm5MeExCS2dRYmVCOHpiemp0UDRVLXhOQlBvSzVNT0tHaXctb3RpOUd2bXBpcnZ6WktjSEIzT3pOUWZtWUNNRGZYY1kxUlEtMVU0T3AtQWJXYllNY3FKUTBNb3pjLXFmeQ?hl=en-US&gl=US&ceid=US%3Aen)-and-[on](https://www.bbc.com/news/articles/c8xgdj9kyero) trade war with the rest of the world. A [volatile Treasury market](https://www.wsj.com/finance/jpmorgans-jamie-dimon-predicts-crack-in-the-bond-market-citing-u-s-fiscal-mess-9d90cb3f) that at times has shown weak demand for U.S. government debt. And a rising appetite among foreign investors in particular to [trim their portfolios' exposure](https://news.google.com/read/CBMiY0FVX3lxTE1YR3g0SEhsQWtTSUp4cHFYX3duOWZfaG56Wl9jTVFPak11UG96QWR1MGhmQWdvX3NZVktFakJ4bk55aUx3c0NyNzQxRFlwNmFPanN2bjEtbmVJbGU5dGNVMVFFUQ?hl=en-US&gl=US&ceid=US%3Aen) to America's volatile politics. <!-- Add links as warranted -->
+
+As economist J.W. Mason recently put it, there’s now a [“moron premium”](https://www.theatlantic.com/economy/archive/2025/04/trump-truss-moron-premium/682421/) attached to markets perceived as politically dysfunctional. In that light, perhaps it’s no wonder capital is flowing into programmable dollars that can move globally at internet speed. <!-- Another handy insert from ChatGPT! -->
 
  <hr>
 
