Adding final headlines, with help from ChatGPT and Copilot

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -1,5 +1,5 @@
-# tktk
-## tktk
+# On-chain, the dollar looks immune to U.S. turmoil
+## Stablecoin issuers are raking in yields, landing venture deals, and moving billions — no Fed intervention required.
 
 ![Circle co-founder and CEO Jeremy Allaire speaking at a fintech conference](https://w3w.news/img/allaire-wikimedia-1920.jpg)
 *Circle co-founder and CEO Jeremy Allaire speaking at MoneyConf 2018 in Dublin. Cropped photo by Eóin Noonan via Wikimedia Commons under Creative Commons 2.0 [license](https://creativecommons.org/licenses/by/2.0/).*
