Doing some copyedits suggested by Copilot

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -20,15 +20,15 @@ Let's start with the good news, all of it on the token startups' end of things:
 
 - **Circle, issuer of the popular USDC stablecoin,** filed with U.S. regulators on Tuesday to [do an initial public offering](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html) at the New York Stock Exchange that would value the company near $6 billion. Bloomberg News reports that asset manager BlackRock, which previously invested in Circle during its private fundraising rounds, plans to [buy additional shares](https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg) in the IPO.
 
-- **Axios reports that startup Atticus** is raising a venture round that could make it the [first new "unicorn"](https://www.theblock.co/post/356431/stablecoin-startup-atticus-nears-2-billion-valuation-following-raise-led-by-defense-tech-firm-ceo-report) minted among stablecoin issuers in 2025. The deal could reported value Atticus as high as $2 billion.
+- **Axios reports that startup Atticus** is raising a venture round that could make it the [first new "unicorn"](https://www.theblock.co/post/356431/stablecoin-startup-atticus-nears-2-billion-valuation-following-raise-led-by-defense-tech-firm-ceo-report) minted among stablecoin issuers in 2025. The deal could reportedly value Atticus as high as $2 billion.
 
 - **The average volume of business-to-business stablecoin payments** hit $3 billion per month in early 2025, [up thirtyfold](https://www.theblock.co/post/356231/b2b-stablecoin-payments-surge-to-36-billion-annual-pace-survey-finds) over the last two years, according to a new survey by Artemis, Castle Island Ventures, and Dragonfly Ventures.
 
 - **A bill is pending in Congress** to clarify U.S. regulations for stablecoins. Both [Vice President J.D. Vance](https://www.axios.com/2025/05/28/vance-trump-crypto-bitcoin-stablecoin) and [Sen. Cynthia Lummis](https://bitcoinmagazine.com/news/us-senator-cynthia-lummis-discusses-bitcoin-reserve-stablecoin-legislation-and-market-structure-bill-at-bitcoin-2025-conference) (R-Wyo.) touted the legislation in remarks last week to the Bitcoin Las Vegas conference.
 
-- **The biggest stablecoin by far is still Tether,** whose capitalization trails only bitcoin and ether among all digital assets. So far in 2025, its valuation has risen 12% to $153 billion, according to [CoinMarketCap](https://coinmarketcap.com/currencies/tether/).
+- **The biggest stablecoin by far is still Tether,** whose market capitalization trails only bitcoin and ether among all digital assets. So far in 2025, its valuation has risen 12% to $153 billion, according to [CoinMarketCap](https://coinmarketcap.com/currencies/tether/).
 
-**Stablecoins carry that monicker** because they're pegged to some other asset, usually the U.S. dollar. Thus they can serve as a useful link between the on-chain financial world and the conventional, greenback-based version. (More on that in a minute.)
+**Stablecoins carry that moniker** because they're pegged to some other asset, usually the U.S. dollar. Thus they can serve as a useful link between the on-chain financial world and the conventional, greenback-based version.
 
 Companies that issue stablecoins make money primarily through interest earned on the reserve assets backing their tokens — typically government-issued cash or short-term U.S. Treasury securities. Some issuers also charge fees to enterprise clients and fintech partners for API access, wallet services, payment processing, or other integrations. <!-- Hat tip to ChatGPT for this graf.-->
 
@@ -76,7 +76,7 @@ As economist J.W. Mason recently put it, there’s now a [“moron premium”](h
 
 ### Looking Ahead
 
-- **Vitalik Buterin sees potential opportunity for Ethereum** in recent decisions by the governments of Norway and Sweden to curtail efforts to go cashless. Their stumbles confirm inherent weaknesses in centralized payment systems that could be remedied by decentralized ones, according to Buterin and other crypto advocates. ([Decrypt](https://decrypt.co/322398/vitalik-buterin-ethereum-sweden-norway-cashless))
+- **Vitalik Buterin sees potential opportunity for Ethereum** in recent decisions by the governments of Norway and Sweden to curtail efforts to go cashless. These stumbles confirm inherent weaknesses in centralized payment systems that could be remedied by decentralized ones, according to Buterin and other crypto advocates. ([Decrypt](https://decrypt.co/322398/vitalik-buterin-ethereum-sweden-norway-cashless))
 
 - **The New York Times' Ivan Penn** is wondering whether the little-known early history of electric vehicles in the U.S. might be [poised to repeat itself](https://news.google.com/read/CBMif0FVX3lxTE5Qa2tTMHdhQTJJeklzbTVBZ0xSbkhTenNsOFc5VnlpNEctNjQwVUxxR09ZNlRDUUZhUjZ3blU1d0ZwVkhUU2hoMlZlTHlod2hKYmlZb0VDSG1zQVhScE9aaUc4Ni1QQW1DRnFkOHpoamE4NWR6dVdnVGE3VTJjN0E?hl=en-US&gl=US&ceid=US%3Aen). In the early 20th century, vehicles like the Baker Electric Coupe and the Riker Electric Roadster eventually lost out to Ford's famous Model T in part because the government implemented policies at the time favoring gasoline-powered cars. Now, in a possible modern-day echo of that era, Trumpist Republicans are pushing legislation that could hinder adoption of electric vehicles and favor fossil fuels.
 
@@ -90,6 +90,6 @@ As economist J.W. Mason recently put it, there’s now a [“moron premium”](h
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
-_**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
+_**If you need to reach me directly, please email peter [at] w3w [dot] media.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
