Adding draft summary items, some by Leo/Llama

--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -65,36 +65,36 @@ One early possibility that looks promising: Riff on WSJ story about why bitcoine
    <tr>
      <td>Bitcoin</td>
      <td><!-- BTC weekly closing price --></td>
-     <td><!-- BTC weekly % change --></td>
-     <td><!-- BTC YTD % change --></td>
+     <td><!-- weekly % change --></td>
+     <td><!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
      <td><!-- Nasdaq 100 weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td><!-- weekly % change --></td>
+     <td><!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>Gold</td>
      <td><!-- Gold weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td><!-- weekly % change --></td>
+     <td><!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>USD Index</td>
      <td><!-- USD Index weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td><!-- weekly % change --></td>
+     <td><!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
      <td><!-- 10-year weekly closing yield --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td><!-- weekly change --></td>
+     <td><!-- YTD change --></td>
    </tr>
 
 </tbody>
@@ -103,17 +103,17 @@ One early possibility that looks promising: Riff on WSJ story about why bitcoine
 
 ### Looking Ahead
 
-- New data center city forming outside Reno. https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/
+- A data center boom is underway in the desert east of Reno, Nevada, with major tech companies like Google, Microsoft, and Apple building massive facilities to support their artificial intelligence and cloud computing needs. This surge in construction has raised concerns about the energy demands and carbon costs of the AI revolution, which is the focus of MIT Technology Review's new series, "Power Hungry." ([MIT Technology Review](https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/)) <!-- Draft by Leo/Llama 3.1 8B -->
 
-- Prof G/Pat McGee on iPhone in the U.S.
+- Prof G/Pat McGee on iPhone in the U.S. ([]()) <!-- Link TK -->
 
-- **Uh-oh.** ABC News reports that "wrench attacks" against wealthy crypto investors are [on the rise](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144). One high-profile example: A recent kidnapping and torture case in New York's posh SoHo neighborhood.
+- **Uh-oh.** ABC News reports that "wrench attacks" against wealthy crypto investors are [on the rise](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144). One high-profile example: A recent [kidnapping and torture case](https://nypost.com/2025/05/23/us-news/kentucky-crypto-investor-allegedly-tortured-captive-italian-tourist-for-weeks-in-luxury-nyc-apartment-sources/) in New York's posh SoHo neighborhood. <!-- Draft by PM -->
 
 ### Odds & Ends
 
-- ICYMI: U.S. students' classroom performance has dropped markedly since the COVID19 pandemic according to multiple metrics, with one notable exception: high-school graduation rates. https://www.washingtonpost.com/opinions/2025/05/15/schools-pandemic-graduation-rates/
+- Despite the COVID-19 pandemic having a devastating impact on American students and schools in many areas, high school graduation rates have continued to rise steadily over the past five years. However, this trend is concerning as it suggests that many students are being allowed to graduate underprepared for college or the workforce, with research indicating that chronic absenteeism during the pandemic had a significantly weakened effect on graduation rates. ([Washington Post](https://www.washingtonpost.com/opinions/2025/05/15/schools-pandemic-graduation-rates/)) <!-- Draft by Leo/Llama 3.1 8B -->
 
-- https://www.washingtonpost.com/travel/2025/05/31/solo-airfare-increase-thrifty-traveler/
+- Airline experts have discovered that some major carriers, including Delta, United, and American Airlines, are charging individual passengers more for seats on identical flights compared to groups of travelers. This pricing strategy, which may not be new, has sparked debate among travel experts and raises questions about transparency in airline pricing. ([Washington Post](https://www.washingtonpost.com/travel/2025/05/31/solo-airfare-increase-thrifty-traveler/)) <!-- Draft by Leo/Llama 3.1 8B -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
